# imagegen

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.c  color.h  debug.c  debug.h  doxygen.conf  expand.sh  generate.c  generate_common.c  generate_common.h  generate_normal.c  generate_normal.h  generate_symmetric.c  generate_symmetric.h  input.c  input.h  main.c  output.c  output.h  pnmlib.c  pnmlib.h  progress.c  progress.h  safelib.c  safelib.h  seed.h  seed_common.c  seed_common.h  seed_normal.c  seed_normal.h  seed_symmetric.c  seed_symmetric.h  setup.c  setup.h  symmetric_common.c  symmetric_common.h  whitelist1.ppm  (+14 more)
include/: color.h  debug.h  generate_common.h  generate_normal.h  input.h  output.h  pnmlib.h  progress.h  randint.h  safelib.h  seed_common.h  seed_symmetric.h  setup.h
src/: color.c  debug.c  generate_common.c  generate_normal.c  generate_symmetric.c  input.c  main.c  output.c  pnmlib.c  progress.c  randint.c  safelib.c  seed_common.c  seed_normal.c  seed_symmetric.c  setup.c
